
2007-02-11  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix bug #4423: BE search doesn't work with UTF-8 chars (thanks to John Angel)

2007-02-07  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.1RC1
	* Fixed bug #4883: mod_rewrite rules rewrite missing favicon.ico to index.php (thanks to Stefan Geith for this hint - notice that manual modification of existing .htaccess files might be neccessary)
	* Added feature #4476: Allow limitation of config.linkVars
	* Fixed bug #4917: Wrong links inside mounted page with overlay (thanks to Melanie Meyer / Franz Ripfel)

2007-02-06  Oliver Hader  <oh@inpublica.de>

	* Fixed bug 3985: Wrong substitution for spamProtectEmailAddresses_atSubst/spamProtectEmailAddresses_lastDotSubst

2007-02-06  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #4742: link to user on User Admin page is following to wrong URL

2007-02-06  Michael Stucki  <michael@typo3.org>

	* Added feature #4592: Keep indexed_search tables consistent when deleting/hiding pages (Thanks to Michael Fritz)
	* Fixed bug #4666: Use TYPO3 settings when formatting dates
	* Fixed bug #4581: Duplicate entry on cache_pagesection on reloading twice. See bugtracker entry for details about this change.
	* Added feature #4536: Add new property "additionalParams" to GMENU items / Cleanup in tslib_menu
	* Fixed bug #3069 again: Ignore version check if no requirements are specified
	* indexed_search: Turn off maxAge setting as this "feature" seems to make no sense at all
	* Fixed bug #4689: Error in t3lib_tcemain while entering a number like 50 or 50.00 into a double2 field
	* Fixed bug #3544: RTE-config in PageTS-config not loaded when in draft-workspace

2007-02-05  Ingmar Schlecht  <ingmar@typo3.org>

	* Lots of <label> tags added to checkbox labels throughout the core (Thanks to Ingo Renner for this big patch!)

2007-02-05  Oliver Hader  <oh@inpublica.de>

	* Bugfix for TSconfig overriding TCA field configuration